--- a/src/app/pages/admin/Administradores/admin-form.component.html
+++ b/src/app/pages/admin/Administradores/admin-form.component.html
@@ -1,5 +1,4 @@
-
-   <div class="container">
+<div class="container">
   <h2>{{ isEdit ? 'Editar Administrador' : 'Registrar Administrador' }}</h2>
   <form [formGroup]="adminForm" (ngSubmit)="guardar()">
     <div class="form-group">
@@ -27,13 +26,14 @@
       <input type="password" formControlName="password" class="form-control" />
     </div>
 
+    <div class="form-group">
+      <label>Contacto</label>
+      <input type="text" formControlName="contacto" class="form-control" />
+    </div>
+
     <div class="buttons">
       <button type="submit">{{ isEdit ? 'Actualizar' : 'Registrar' }}</button>
       <button type="button" class="cancel-btn" (click)="cancelar()">Cancelar</button>
     </div>
   </form>
-
-  <div class="buttons" *ngIf="!isEdit">
-    <button type="button" (click)="crearAdminConGoogle()" class="google">Crear con Google</button>
-  </div>
 </div>
