mejora e implementacion de citas en Backend tanto para Pacientes como para Administradores

--- a/src/app/pages/admin/citas/citas.component.html
+++ b/src/app/pages/admin/citas/citas.component.html
@@ -24,7 +24,7 @@
           <td>{{ cita.pacienteNombre }}</td>
           <td>{{ cita.medicoNombre }}</td>
           <td>{{ cita.fecha }}</td>
-          <td>{{ cita.hora }}</td>
+          <td>{{ cita.horaInicio }}</td>
           <td>{{ cita.motivo }}</td>
           <td>
             <button (click)="confirmarCita(cita.id!)">Confirmar</button>
