--- a/src/app/pages/paciente/paciente-solicitar-cita.component.html
+++ b/src/app/pages/paciente/paciente-solicitar-cita.component.html
@@ -3,8 +3,8 @@
 <form [formGroup]="form" (ngSubmit)="solicitarCita()">
   <label for="medico">Médico:</label>
   <select id="medico" formControlName="medicoId">
-    <option value="">--Seleccione un médico--</option>
-    <option *ngFor="let medico of medicos" [value]="medico.id">
+    <option [ngValue]="null">--Seleccione un médico--</option>
+    <option *ngFor="let medico of medicos" [ngValue]="medico.id">
       {{ medico.nombre }} - {{ medico.especialidad }}
     </option>
   </select>
@@ -12,12 +12,13 @@
   <div *ngIf="agendasDisponibles.length > 0">
     <label for="agenda">Fechas y Horarios Disponibles:</label>
     <select id="agenda" formControlName="agendaId">
-      <option value="">--Seleccione una agenda--</option>
-      <option *ngFor="let agenda of agendasDisponibles" [value]="agenda.id">
+      <option [ngValue]="null">--Seleccione una agenda--</option>
+      <option *ngFor="let agenda of agendasDisponibles" [ngValue]="agenda.id">
         {{ agenda.fecha }} - {{ agenda.horaInicio }} a {{ agenda.horaFin }}
       </option>
     </select>
   </div>
+
   <div *ngIf="form.get('medicoId')?.value && agendasDisponibles.length === 0">
     <p style="color: red;">Este médico no tiene agendas disponibles.</p>
   </div>
