agrego de citas y mejora de funcionamiento

--- a/src/app/pages/admin/citas/solicitudes-citas.component.html
+++ b/src/app/pages/admin/citas/solicitudes-citas.component.html
@@ -27,8 +27,8 @@
           <td>{{ cita.horaInicio }}</td>
           <td>{{ cita.motivo }}</td>
           <td>
-            <button (click)="confirmarCita(cita.id!)">Confirmar</button>
-            <button (click)="rechazarCita(cita.id!)" class="rechazar">Rechazar</button>
+            <button (click)="confirmarCita(cita)">Confirmar</button>
+            <button (click)="rechazarCita(cita)" class="rechazar">Rechazar</button>
           </td>
         </tr>
       </tbody>
