--- a/src/app/pages/admin/agenda/agenda-form.component.html
+++ b/src/app/pages/admin/agenda/agenda-form.component.html
@@ -12,7 +12,7 @@
 
     <div class="form-group">
       <label>Fecha</label>
-      <input type="date" class="form-control" formControlName="fecha">
+      <input type="date" class="form-control" formControlName="fecha" [min]="minDate">
     </div>
 
     <div class="form-group">
@@ -62,7 +62,7 @@
 
     <div class="form-group mt-2">
       <label>Fecha de inicio:</label>
-      <input type="date" class="form-control" [(ngModel)]="fechaInicioMes" [ngModelOptions]="{standalone: true}" name="fechaInicioMes" />
+      <input type="date" class="form-control" [(ngModel)]="fechaInicioMes" [ngModelOptions]="{standalone: true}" name="fechaInicioMes" [min]="minDate" />
     </div>
     <div class="form-group mt-2">
       <label>Fecha de fin:</label>
